[package]
name = "action-test"
version = "0.1.0"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2021"
description = "action testing do not use"
readme = "README.md"
repository = "https://github.com/kwheelans/action-test"


[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
simple_logger = "4"
thiserror = "1"


[profile.release]
lto = true
codegen-units = 1
